@@ -29,6 +29,7 @@ Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
 
 bool UI_LeaderboardUICreate()
 {
+	UI_SetPassive("LeaderboardUI", true);
 	// SIZE SHOULDN'T HAVE TO BE MULTIPLIED BY VID_HUDSCALE
 	UI_AddBox("LeaderboardUI", "LeaderboardUI_Box", (viddef.width / 2) - 320 * vid_hudscale->value, (viddef.height / 2) - 192 * vid_hudscale->value,
 		640 * vid_hudscale->value, 384 * vid_hudscale->value, 0, 0, 0, 150); 
